fix: update reset file and add overflow property

--- a/assets/reset.css
+++ b/assets/reset.css
@@ -58,4 +58,6 @@ a {
 ol,
 ul {
 	list-style: none;
+	margin: 0;
+	padding: 0;
 }
