--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,7 @@
 .page{
     min-height: 100vh;
     font-family: 'Inter', sans-serif;
+    overflow: hidden;
 }
 
 .cabecalho, .menu__list{
